[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Screens/EquipPilotsScene.gd" type="Script" id=1]
[ext_resource path="res://Generators/Pilot/scenes/PilotPortrait.tscn" type="PackedScene" id=2]

[node name="EquipPilotsScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Screen" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 633.0
margin_bottom = 353.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Title" type="Label" parent="Screen"]
margin_right = 626.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "PARTY_SELECT"
align = 1

[node name="Columns" type="HBoxContainer" parent="Screen"]
margin_top = 21.0
margin_right = 626.0
margin_bottom = 346.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PilotContainer" type="VBoxContainer" parent="Screen/Columns"]
margin_right = 153.0
margin_bottom = 325.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PilotName" type="Label" parent="Screen/Columns/PilotContainer"]
margin_right = 153.0
margin_bottom = 17.0
text = "P_NAME"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="Screen/Columns/PilotContainer"]
margin_top = 21.0
margin_right = 153.0
margin_bottom = 131.0
rect_min_size = Vector2( 0, 110 )

[node name="PilotPortrait" parent="Screen/Columns/PilotContainer/CenterContainer" instance=ExtResource( 2 )]
position = Vector2( 78, 53 )

[node name="StatsLabel" type="Label" parent="Screen/Columns/PilotContainer"]
margin_top = 135.0
margin_right = 153.0
margin_bottom = 152.0
text = "STATS_LABEL"
align = 1

[node name="StatsList" type="VBoxContainer" parent="Screen/Columns/PilotContainer"]
margin_top = 156.0
margin_right = 153.0
margin_bottom = 156.0

[node name="FormLabel" type="Label" parent="Screen/Columns/PilotContainer"]
margin_top = 160.0
margin_right = 153.0
margin_bottom = 177.0
text = "FORM_LABEL"
align = 1

[node name="FormValue" type="Label" parent="Screen/Columns/PilotContainer"]
margin_top = 181.0
margin_right = 153.0
margin_bottom = 198.0
text = "F_NAME"
align = 1

[node name="SpeciesLabel" type="Label" parent="Screen/Columns/PilotContainer"]
margin_top = 202.0
margin_right = 153.0
margin_bottom = 219.0
text = "SPECIES_LABEL"
align = 1

[node name="SpeciesValue" type="Label" parent="Screen/Columns/PilotContainer"]
margin_top = 223.0
margin_right = 153.0
margin_bottom = 240.0
text = "S_NAME"
align = 1

[node name="BenchContainer" type="VBoxContainer" parent="Screen/Columns"]
margin_left = 157.0
margin_right = 311.0
margin_bottom = 325.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BenchLabel" type="Label" parent="Screen/Columns/BenchContainer"]
margin_right = 154.0
margin_bottom = 17.0
text = "BENCH_LABEL"
align = 1

[node name="BenchList" type="VBoxContainer" parent="Screen/Columns/BenchContainer"]
margin_top = 21.0
margin_right = 154.0
margin_bottom = 21.0

[node name="PartyContainer" type="VBoxContainer" parent="Screen/Columns"]
margin_left = 315.0
margin_right = 468.0
margin_bottom = 325.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PartyLabel" type="Label" parent="Screen/Columns/PartyContainer"]
margin_right = 153.0
margin_bottom = 17.0
text = "PARTY_LABEL"
align = 1

[node name="PartyList" type="VBoxContainer" parent="Screen/Columns/PartyContainer"]
margin_top = 21.0
margin_right = 153.0
margin_bottom = 21.0

[node name="StatsContainer" type="VBoxContainer" parent="Screen/Columns"]
margin_left = 472.0
margin_right = 626.0
margin_bottom = 325.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Screen/Columns/StatsContainer"]
margin_right = 154.0
margin_bottom = 298.0
size_flags_vertical = 3

[node name="StatsLabel" type="Label" parent="Screen/Columns/StatsContainer/VBoxContainer"]
margin_right = 154.0
margin_bottom = 17.0
text = "ALL_STATS_LABEL"

[node name="FinishButton" type="Button" parent="Screen/Columns/StatsContainer"]
margin_top = 302.0
margin_right = 154.0
margin_bottom = 325.0
text = "FINISH_LABEL"

[connection signal="pressed" from="Screen/Columns/StatsContainer/FinishButton" to="." method="_on_FinishButton_pressed"]
